# snake-rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/game/: environment.rs  game.rs  mod.rs  snake.rs
