[package]
name = "snake-rs"
version = "0.1.0"
authors = ["Asi7ho <46624642+Asi7ho@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im"]}
rand="0.8.3"